# rust-routine

./: .gitignore  Cargo.toml  README.md
algorithm/algorithm-001/: Cargo.toml
algorithm/algorithm-001/src/: main.rs
grammar/: Cargo.toml  build.rs
grammar/grammar-001/: Cargo.toml
grammar/grammar-001/src/: question_one.rs
grammar/grammar-002/: Cargo.toml
grammar/src/: main.rs
grammar/src/callC/: mod.rs  tests.rs
grammar/src/macros/: mod.rs  tests.rs
grammar/src/question/: mod.rs  tests.rs
macros/: Cargo.toml
macros/src/: lib.rs
practice/clap-demo/: Cargo.toml
practice/clap-demo/src/: main.rs
practice/client/: info.md
practice/client/src/: main.rs
practice/day-report/: Cargo.toml  info.md
practice/day-report-settings/: Cargo.toml
practice/day-report-settings/src/: main.rs
practice/day-report-upgade/: Cargo.toml  app.yml
practice/day-report-upgade/src/: main.rs
practice/day-report/src/: main.rs
practice/read-yml/: Cargo.toml  app.yml
practice/read-yml/src/: main.rs
practice/request/: Cargo.toml
practice/request-demo/: Cargo.toml
practice/request-demo/src/: main.rs
practice/server-client/: Cargo.toml
practice/server-client/src/: main.rs
practice/server/src/: main.rs
practice/ws-client/: Cargo.toml
practice/ws-server/: Cargo.toml
practice/ws-server-client/: Cargo.toml
rCore/: README.md
rCore/record/: 2022-7.md
training/axem-web/: Cargo.toml
training/axum-web/: Cargo.toml
training/dioxus-web/: Cargo.toml
training/example-01/: info.md
training/poem-web/: Cargo.toml
training/yew-web/: Cargo.toml
(+10 files in other folders)
